--- a/tex/petersburg.tex
+++ b/tex/petersburg.tex
@@ -2,11 +2,17 @@
 \usepackage[utf8]{inputenc}
 \usepackage[margin=1.5in]{geometry}
 \usepackage[english]{babel}
+\usepackage[dvipsnames]{xcolor}
 
+
+% --- Figures ---
+% \floatplacement{figure}{htb!} % (h)ere (t)op (b)ottom (p)age
 \usepackage{graphicx}
 \graphicspath{{figures/}}
-% \floatplacement{figure}{htb!} % (h)ere (t)op (b)ottom (p)age
 
+\usepackage{subcaption}
+
+% --- Math ---
 \usepackage{amsmath}
 \usepackage{nicefrac}
 
@@ -37,8 +43,9 @@
   BoldFont = Regular]
 
 % --- Citations ---
-\usepackage[style=science,sortcites=true,sorting=nyt,backend=biber]{biblatex}
-\addbibresource{ref.bib}
+\usepackage[style=apa,sortcites=true,sorting=nyt,backend=biber]{biblatex}
+% TODO Following does not seem to work in subdirectory where it should be!
+\addbibresource{tex/ref.bib}
 
 % --- Header --- 
 
@@ -63,15 +70,16 @@ If heads appears for the first time on turn $n$, the player is awarded $\$2^n$.
 
 The St. Petersburg game's possible winnings are geometrically distributed with $Pr(n)=\frac{1}{2}^{n}$, where $Pr(n)$ is the probability of toss $n$ being the first occurrence of heads and thus winning $\$2^n$.
 
-\section{Continuous}
-
-Following probability density function
-
-$$f(x)=\frac{1}{2}2^{-\frac{1}{2}x}$$
+\begin{figure}[htb]
+  \centering
+  \includegraphics{distribution}
+  \caption{Distribution of payouts in one round of the St. Petersburg Game. Each bar has an area of 1 and thus the expected value is infinite.}
+  \label{fig:distribution}
+\end{figure}
 
 \section{Simulating for world}
 
-\begin{table}[h]
+\begin{table}[htb]
   \centering
   \begin{tabular}{cc}
     \toprule
@@ -84,19 +92,17 @@ $$f(x)=\frac{1}{2}2^{-\frac{1}{2}x}$$
   \label{tab:world}
 \end{table}
 
-\begin{figure}[h]
-\includegraphics{distribution}
-\caption{ Distribution }
-\end{figure}
 
-\begin{figure}[h]
-  \includegraphics[width=\linewidth]{windmap}
-  \caption{ Distribution }
+\begin{figure}[htb]
+  \centering
+  \includegraphics{world}
+  \caption{Change}
+  \label{fig:distribution}
 \end{figure}
 
 \section{Lottery}
 
-\begin{table}[h]
+\begin{table}[htb]
   \centering
   \begin{tabular}{cc}
     \toprule
@@ -109,7 +115,64 @@ $$f(x)=\frac{1}{2}2^{-\frac{1}{2}x}$$
   \label{tab:lotto}
 \end{table}
 
-Hello
+\section{Evolution}
 
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=\textwidth]{average-over-time}
+  \caption{Payout}
+\end{figure}
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=\textwidth]{average-over-time-fit}
+  \caption{Payout Fit}
+\end{figure}
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=\textwidth]{winnings-2}
+  \includegraphics[width=\textwidth]{winnings-100}
+  
+  \caption{With a per-round fee of \$2, the player wins every time. If that fee is increased to a hundred dollars, however, most players will suffer a loss after 10,000 rounds.}
+  \label{fig:evolution}
+\end{figure}\label{fig:payout_p}
+
+\begin{minipage}{\textwidth}
+\section{Steinhaus Sequence}
+Start with an empty sequence of infinite length. Now fill every \textit{other} element with a 2.
+
+\[\begin{bmatrix}{\color{RawSienna} 2} & \_ & {\color{RawSienna} 2} & \_ & {\color{RawSienna} 2} & \_ & {\color{RawSienna} 2}\dots\end{bmatrix} \]
+
+{Fill every 4th\textsuperscript{th} element with a 4.
+
+\[\begin{bmatrix}2 & {\color{RawSienna} 4} & 2 & \_ & 2 & {\color{RawSienna} 4} & 2\dots\end{bmatrix} \]
+
+Fill every 8th\textsuperscript{th} element with an 8.
+
+\[\begin{bmatrix}2 & 4 & 2 & {\color{RawSienna} 8} & 2 & 4 & 2\dots\end{bmatrix} \]
+
+And so on\dots\\\\
+\end{minipage}
+
+This approach was first proposed by \textcite{Steinhaus1949}.
+  
+
+Notice that this represents exactly expected payouts of the St. Petersburg Game. Picking randomly from elements in the sequence will produce 2 half the time, 4 one-quarter of the time, 8 one-eight of the time, and so forth.
+
+One can therefore reformulate the paradox as a random draw
+
+
+
+When the per-round fee is set to $\log_2N+2$, where $N$ is the total number of rounds played, wealth is asymptotically stable as shown in Figure \ref{fig:evolution-fair}. Note that on most rounds the player will lose money, but this is offset by the occasional large payout from the house.
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=\textwidth]{winnings-N}
+    \caption{Evolution of gain/loss over 10,000 round with a per-round fee of $\log_2(10000)+2$. As expected, with this fee wealth is asymptotically stable.}
+    \label{fig:evolution-fair}
+  \end{figure}
+
+\clearpage
 \printbibliography
 \end{document}
