--- a/ref.bib
+++ b/ref.bib
@@ -19,3 +19,75 @@
   publisher = {{de l'imprimerie royale}},
   file = {/home/alex/Documents/Resources/Zotero/storage/MUUZCSNK/Mémoires_donnés_à_l_Académie_royale.pdf}
 }
+
+
+@article{risk1954exposition,
+  title = {Exposition of a New Theory on the Measurement},
+  author = {Bernoulli, Daniel},
+  date = {1954},
+  journaltitle = {Econometrica : journal of the Econometric Society},
+  shortjournal = {Econometrica},
+  volume = {22},
+  number = {1},
+  pages = {23--36},
+  file = {/home/alex/Documents/Resources/Zotero/storage/SGF2IJI3/BernoulliDRiskEc19541738.pdf}
+}
+
+
+@article{petersTimeResolutionSt2011,
+  title = {The Time Resolution of the {{St Petersburg}} Paradox},
+  author = {Peters, Ole},
+  date = {2011-12-13},
+  journaltitle = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+  shortjournal = {Phil. Trans. R. Soc. A.},
+  volume = {369},
+  number = {1956},
+  pages = {4913--4931},
+  issn = {1364-503X, 1471-2962},
+  doi = {10.1098/rsta.2011.0065},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rsta.2011.0065},
+  urldate = {2021-12-11},
+  abstract = {A resolution of the St Petersburg paradox is presented. In contrast to the standard resolution, utility is not required. Instead, the time-average performance of the lottery is computed. The final result can be phrased mathematically identically to Daniel Bernoulli's resolution, which uses logarithmic utility, but is derived using a conceptually different argument. The advantage of the time resolution is the elimination of arbitrary utility functions.},
+  langid = {english},
+  file = {/home/alex/Documents/Resources/Zotero/storage/LMKS6DUQ/Peters - 2011 - The time resolution of the St Petersburg paradox.pdf}
+}
+
+@software{daniel_c_jones_2021_5559613,
+  author       = {Daniel C. Jones and
+                  Ben Arthur and
+                  Tamas Nagy and
+                  Mattriks and
+                  Shashi Gowda and
+                  Godisemo and
+                  Tim Holy and
+                  Andreas Noack and
+                  Avik Sengupta and
+                  Darwin Darakananda and
+                  Adam B and
+                  Iain Dunning and
+                  Simon Leblanc and
+                  Rik Huijzer and
+                  Keno Fischer and
+                  David Chudzicki and
+                  Morten Piibeleht and
+                  Alex Mellnik and
+                  Dave Kleinschmidt and
+                  Tom Breloff and
+                  Yichao Yu and
+                  Joey Huchette and
+                  Mike J Innes and
+                  inkyu and
+                  john verzani and
+                  Artem Pelenitsyn and
+                  Calder Coalson and
+                  Ciarán O'Mara and
+                  Elliot Saba},
+  title        = {GiovineItalia/Gadfly.jl: v1.3.4},
+  month        = oct,
+  year         = 2021,
+  publisher    = {Zenodo},
+  version      = {v1.3.4},
+  doi          = {10.5281/zenodo.5559613},
+  url          = {https://doi.org/10.5281/zenodo.5559613}
+
+}
